Chat/chat-main/k8s/chat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-app
  labels:
    app: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-app
  template:
    metadata:
      labels:
        app: chat-app
    spec:
      containers:
      - name: chat
        image: epicness0022/tuitiondaddychat:latest
        ports:
        - containerPort: 3000
        - containerPort: 3001
      imagePullSecrets:
      - name: docker-secret
---
apiVersion: v1
kind: Service
metadata:
  name: chat-app
spec:
  selector:
    app: chat-app
  ports:
    - name: chat-port
      protocol: TCP
      port: 3000
      targetPort: 3000
    - name: file-uploader-port
      protocol: TCP
      port: 3001
      targetPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: chat-app
spec:
  type: NodePort
  selector:
    app: chat-app
  ports:
    - name: chat-port
      port: 3000
      targetPort: 3000
      nodePort: 30000
    - name: file-uploader-port
      port: 3001
      targetPort: 3001
      nodePort: 30001
